feat: add steps of building application in file maven.yml github actions

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,4 +22,25 @@ jobs:
     - name: Run tests
       run: mvn test
 
+  build:
+    needs: tests
+    name: Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build app
+        run: mvn package -DskipTests --file pom.xml
+      - name: Upload JAR
+        uses: actions/setup-java@v3
+        with:
+          name: artifact
+          path: target/trailers-0.0.1-SNAPSHOT.jar
+
    
