feat: add configuration integration test and findAllGenderControllerTest

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,18 +1,32 @@
 server.port=5000
 
-spring.jpa.database=postgresql
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=false
+# DATABASE H2 IN MEMORY
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/trailersTest
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.initialization-mode=always
+
+# DATABASE POSTGRES TEST
+
+#spring.jpa.database=postgresql
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=false
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost/trailersTest
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
 # SWAGGER CONFIG
-springdoc.api-docs.path=/api
-springdoc.swagger-ui.path=/
+#springdoc.api-docs.path=/api
+#springdoc.swagger-ui.path=/
 
 # FILES LOG LOCATIONS
 #logging.file.path=.
